Extension content verifier: ignore empty relative paths

Some extensions make a request to "/" which confuses the extension
content verifier and causes it to mark the extension as corrupted.

Bug: 791929
Change-Id: Id594bd714048d33ddcf88fa86b26ce0a7696503c