extensions/browser/content_hash_reader.cc
@@ -79,7 +79,8 @@ bool ContentHashReader::Init() {
   if (!verified_contents.HasTreeHashRoot(relative_path_)) {
     // Making a request to a non-existent resource should not result in
     // content verification failure.
-    if (!base::PathExists(extension_root_.Append(relative_path_)))
+    if (!base::PathExists(extension_root_.Append(relative_path_)) ||
+        relative_path_.empty())
       file_missing_from_verified_contents_ = true;
 
     return false;
